--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@tailwindcss/vite": "^4.0.6",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.4.1",
+    "i18next": "^24.2.2",
     "lenis": "^1.1.20",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.5",
     "react-use-measure": "^2.1.7",
     "tailwindcss": "^4.0.6"
