--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.5",
     "react-use-measure": "^2.1.7",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
