contact page other problem fixed

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@motionone/utils": "^10.18.0",
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.0.6",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.4.1",
     "i18next": "^24.2.2",
